Fix JS, add col to stats, hide .start-date on small screens

--- a/intranet/static/css/eighth.common.scss
+++ b/intranet/static/css/eighth.common.scss
@@ -12,6 +12,9 @@
         .extra-title {
             display: none;
         }
+        .start-date {
+            display: none;
+        }
     }
 }
 
